2012-05-06  Cyrus Harmon <ch-slime@bobobeach.com>
	    Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-pprint-eval-region): New command. No keybinding
	though.

2012-05-04  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp: Remove the SB-C::MERGE-TAIL-CALLS proclamation.
	It does nothing, and never did, actually.

2012-05-03  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-goto-source-location): Allow for
	:buffer-and-file locations, prefer buffer if the buffer exists.

	* swank-sbcl.lisp (definition-source-for-emacs): Send
	:buffer-and-file when both are available.
	(quit-lisp): Use sb-ext:exit when it's present.

2012-05-03  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (find-definitions-find-symbol): Put back accidentally
	removed with-buffer-syntax.

2012-05-02  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (*find-definitions-right-trim*)
	(*find-definitions-left-trim*): New variables. ",:." and "#:"
	default values.
	(find-definitions-for-emacs): Trim names with using the above
	variables when a symbol is not found.

2012-05-01  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-xrefs-for-notes): Format location in a proper
	way.
	Reported by Max Mikhanosha.

2012-04-27  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (lisp-source-location): How hard can it be to
	get this right? (3-legged IF, FFS!)

2012-04-24  Douglas Crosher <dcrosher@common-lisp.net>

	* swank-scl.lisp (create-socket): correct variable name typo.

	* swank.lisp, swank-rpc.lisp (file options): use #\; to separate the
	file options.

2012-04-23  Christophe Rhodes  <csr21@cantab.net>

	* slime.el (slime-operator-before-point-function): new variable.
	(slime-operator-before-point): use it.
	(slime-lisp-operator-before-point): default implementation for
	slime-operator-before-point-function (unchanged from before).

2012-04-20  Nikodemus Siivola  <nikodemus@random-state.net>
